[gd_scene load_steps=2 format=3 uid="uid://dp5ri8j7ulivd"]

[ext_resource type="Script" uid="uid://bfn81ys5ly35b" path="res://wood_card.gd" id="1_n2ksv"]

[node name="WoodCard" type="Node2D"]
script = ExtResource("1_n2ksv")

[node name="QuantityLabel" type="Label" parent="."]
offset_left = 160.0
offset_top = 16.0
offset_right = 207.0
offset_bottom = 39.0
text = "12"
horizontal_alignment = 2

[node name="PiecesLabel" type="Label" parent="."]
offset_left = 216.0
offset_top = 16.0
offset_right = 263.0
offset_bottom = 39.0
text = "db:"

[node name="VolumeLabel" type="Label" parent="."]
offset_left = 288.0
offset_top = 16.0
offset_right = 335.0
offset_bottom = 39.0
text = "0,144"
horizontal_alignment = 2

[node name="VolumeUnitLabel" type="Label" parent="."]
offset_left = 344.0
offset_top = 16.0
offset_right = 391.0
offset_bottom = 39.0
text = "m3"

[node name="PhiLabel" type="Label" parent="."]
offset_left = 160.0
offset_top = 112.0
offset_right = 184.0
offset_bottom = 135.0
text = "¤"
horizontal_alignment = 2

[node name="DiameterLabel" type="Label" parent="."]
offset_left = 184.0
offset_top = 112.0
offset_right = 216.0
offset_bottom = 135.0
text = "17"
horizontal_alignment = 2

[node name="DiameterUnitLabel" type="Label" parent="."]
offset_left = 216.0
offset_top = 112.0
offset_right = 248.0
offset_bottom = 135.0
text = "cm:"
horizontal_alignment = 2

[node name="CubeLabel" type="Label" parent="."]
offset_left = 352.0
offset_top = 112.0
offset_right = 384.0
offset_bottom = 135.0
text = "12"
horizontal_alignment = 2

[node name="CubeUnitLabel" type="Label" parent="."]
offset_left = 392.0
offset_top = 112.0
offset_right = 439.0
offset_bottom = 135.0
text = "század m3"

[node name="DecreaseButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 144.0
offset_bottom = 144.0
text = "-"

[node name="IncreaseButton" type="Button" parent="."]
offset_left = 576.0
offset_top = 16.0
offset_right = 704.0
offset_bottom = 144.0
text = "+"

[connection signal="pressed" from="DecreaseButton" to="." method="_on_decrease_button_pressed"]
[connection signal="pressed" from="IncreaseButton" to="." method="_on_increase_button_pressed"]
